# linkerd2-proxy

./: Cargo.toml  Makefile  notes.md
lib/buffer/: Cargo.toml
lib/buffer/src/: lib.rs
lib/hedge/: Cargo.toml
lib/hedge/src/: lib.rs  rotating.rs
lib/hedge/tests/: hedge.rs
lib/metrics/src/: histogram.rs  lib.rs
lib/router/src/: daemon.rs  lib.rs
lib/stack/src/: either.rs  layer.rs  lib.rs  map_err.rs  map_target.rs  optional.rs  phantom_data.rs  stack_per_request.rs  watch.rs  when.rs
lib/task/: Cargo.toml
lib/task/src/: lib.rs
router/: Cargo.toml
router/src/: lib.rs
src/: bind.rs  config.rs  connection.rs  inbound.rs  lib.rs  logging.rs  main.rs  map_err.rs  outbound.rs  task.rs  timeout.rs  tower_fn.rs  watch_service.rs
src/app/: config.rs  control.rs  inbound.rs  main.rs  metric_labels.rs  outbound.rs
src/control/: remote_stream.rs  serve_http.rs
src/control/destination/: mod.rs
src/control/destination/background/: client.rs  destination_set.rs  mod.rs
src/proxy/: buffer.rs  canonicalize.rs  server.rs  tcp.rs
src/proxy/http/: client.rs  h2.rs
src/svc/: mod.rs
src/tap/: mod.rs
src/telemetry/http/: sensors.rs  service.rs
src/telemetry/sensor/: transport.rs
src/transparency/: client.rs  glue.rs  orig_proto.rs  server.rs
src/transport/: connection.rs  connection_tests.rs
src/transport/metrics/: mod.rs
src/transport/tls/: config.rs  identity.rs  mod.rs
tests/: discovery.rs
tests/support/: client.rs  controller.rs  mod.rs  server.rs
